--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -13,7 +13,7 @@
                   data: { "report-details-target": "title" }
                 } %>
       <%= f.input :description,
-                placeholder: "Share your experience (optional)",
+                placeholder: "Share the details of your experience (optional)",
                 label: false,
                 input_html: { class: "description" },
                 required: false %>
