--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 @import "pages/incidents/new";
 @import "pages/feed/index";
 @import "pages/profile/index";
-
+@import "pages/devise";
 /* ------------------------------- Components ------------------------------- */
 @import "components/index";
 @import "components/button";
