fixed style for log out button

--- a/app/assets/stylesheets/pages/profile/index.scss
+++ b/app/assets/stylesheets/pages/profile/index.scss
@@ -24,9 +24,8 @@
   align-items: center;
   padding: 0.7em;
   background-color: #40464c;
-  color: #e4e4e4;
+  color: #c2c2c2;
   border-radius: 4px;
-  right: 0;
   width: 100%;
   justify-content: center;
 }
