removed italic style

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -22,7 +22,7 @@
   </div>
   <%= link_to destroy_user_session_path, method: :delete do%>
     <div class="button--logout">
-      <em>Log Out</em>
+      Log Out
     </div>
   <% end %>
 </div>
