--- a/app/assets/stylesheets/pages/route/index.scss
+++ b/app/assets/stylesheets/pages/route/index.scss
@@ -14,7 +14,7 @@
     min-width: 100%;
 
     input[type="text"] {
-      padding: 0 1rem;
+      padding: 0 1.6rem;
     }
   }
 
@@ -37,6 +37,13 @@
   }
 
   .mapboxgl-ctrl-directions {
-    width: 100%;
+    width: 84%;
+    max-width: unset;
+  }
+
+  .mapbox-directions-inputs button {
+    background-color: $warning;
+    border-radius: 5px;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(234deg) brightness(105%) contrast(102%);
   }
 }
