--- a/app/assets/stylesheets/pages/route/index.scss
+++ b/app/assets/stylesheets/pages/route/index.scss
@@ -28,7 +28,7 @@
     }
 
     .mapboxgl-ctrl-geocoder {
-      border-bottom: 1px solid #FFFFFF20;
+      border-bottom: 1px solid #ffffff20;
     }
   }
 
@@ -41,9 +41,22 @@
     max-width: unset;
   }
 
+  /* -------------------- Swap directions and clear buttons ------------------- */
   .mapbox-directions-inputs button {
     background-color: $warning;
     border-radius: 5px;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(234deg) brightness(105%) contrast(102%);
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(234deg)
+      brightness(105%) contrast(102%);
+  }
+  /* -------------------- Swap directions and clear buttons ------------------- */
+
+  .mapbox-directions-profile {
+    background: $light-gray;
+  }
+
+  .mapbox-directions-profile input[type="radio"]:checked + label:hover, .mapbox-directions-profile input[type="radio"]:checked + label {
+    transition: all 0.5s;
+    background: $primary;
+    color: $light;
   }
 }
