--- a/app/assets/stylesheets/pages/route/index.scss
+++ b/app/assets/stylesheets/pages/route/index.scss
@@ -1,17 +1,29 @@
 .route {
+
+  &__header {
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
+
+    h3 {
+      font-size: 32px;
+    }
+
+    .text--blue {
+      color: $primary;
+    }
+  }
+
   .mapboxgl-ctrl-geocoder--input {
     display: none;
   }
 
-  .mapboxgl-ctrl-top-left {
-    width: 100%;
+  .mapboxgl-ctrl-directions {
+    width: 80%;
   }
 
   .mapbox .mapboxgl-ctrl-geocoder {
     background: transparent;
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
 
     input[type="text"] {
       padding: 0 1.6rem;
@@ -39,6 +51,28 @@
   .mapboxgl-ctrl-directions {
     width: 84%;
     max-width: unset;
+  }
+
+  .mapboxgl-ctrl-top-left {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+
+    .mapboxgl-ctrl {
+      float: left;
+      margin-top: 1em;
+      position: relative;
+      margin: 1em 0 0 0;
+    }
+  }
+
+  .mapboxgl-ctrl-top-right {
+    .mapboxgl-ctrl-group {
+      position: absolute;
+      z-index: -1;
+      top: 11em;
+      right: -1rem;
+    }
   }
 
   /* -------------------- Swap directions and clear buttons ------------------- */
