--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -46,7 +46,7 @@
   &gl-ctrl.mapboxgl-ctrl-group {
     position: absolute;
     z-index: -1;
-    top: 100px;
+    top: 6.5em;
     right: -1rem;
   }
   /* ------------------------- Current Position Button ------------------------ */
