--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -11,6 +11,7 @@
     padding: 0;
     transition: all 0.3s ease-in-out;
     max-height: 0px;
+    transition: 0.6s;
 
     &.open {
       max-height: 200px;
@@ -19,8 +20,9 @@
 
   &__button {
     background: transparent;
-    font-weight: 600;
+    font-weight: 400;
     letter-spacing: 1px;
+    color: rgb(223, 223, 223);
 
     i {
       transition: $transition;
