--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,6 +19,7 @@
     background: #383838;
     margin: 0;
     border-radius: 16px 16px 0 0;
+    transition: 0.6s;
 
     &.close {
       bottom: 5.5em;
