--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -9,6 +9,10 @@
   position: relative;
   overflow: hidden;
 
+  &.open {
+    display: none;
+  }
+
 /* ----------------------------- Categories List ---------------------------- */
   &__list {
     display: flex;
