--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -4,7 +4,11 @@
     <div class="categories__item">
       <button class="categories__button active" data-active-button-target="categoryButton">
         <%= image_tag "#{file}" %>
-        <p><%= formatted_file.capitalize %></p>
+        <% if formatted_file == 'disturb' %>
+          <p>Disturbing the Peace</p>
+        <% else %>
+          <p><%= formatted_file.capitalize %></p>
+        <% end %>
       </button>
     </div>
   <% end %>
