fixed incidents create controller so it will tag it as Disturb if Disturbing the Peace is chosen in the form

--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -1,6 +1,6 @@
 <%= f.input :category_list,
             label: "Choose a category",
-            collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturb", "Traffic" ],
+            collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
             default: false,
             input_html: {
               class: "category",
