--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -1,8 +1,14 @@
+<div data-controller="active-button">
+  <p>Choose a category</p>
+  <div class="categories">
+    <%= render "components/categories_list" %>
+  </div>
+</div>
 <%= f.input :category_list,
-            label: "Choose a category",
-            collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
-            default: false,
+            as: :hidden,
             input_html: {
-              class: "category",
-              data: { "report-details-target": "category" }
-            } %>
+              value: (params[:category] if params[:category].present?),
+              # class: "category"
+              # data: { "report-details-target": "category" }
+            }
+%>
