made disturbing the peace the default category

--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -8,7 +8,6 @@
             as: :hidden,
             input_html: {
               value: (params[:category] if params[:category].present?),
-              # class: "category"
-              # data: { "report-details-target": "category" }
+              data: { "report-details-target": "category" }
             }
 %>
