changed label color for categories on incidents new page

--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -21,4 +21,8 @@
     grid-template-columns: 0.5fr 0.5fr auto;
     align-self: start;
   }
+
+  .text--gray {
+    color: rgb(170, 170, 170);
+  }
 }
