--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="active-button">
-  <p>Choose a category</p>
+  <p class="text--gray">Choose a category</p>
   <div class="categories">
     <%= render "components/categories_list" %>
   </div>
