fixed incidents new page

--- a/app/views/incidents/_report_categories_input.html.erb
+++ b/app/views/incidents/_report_categories_input.html.erb
@@ -7,7 +7,7 @@
 <%= f.input :category_list,
             as: :hidden,
             input_html: {
-              value: (params[:category] if params[:category].present?),
+              value: "theft", # default value
               data: { "report-details-target": "category" }
             }
 %>
