--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -2,7 +2,9 @@
   <% Dir.each_child("app/assets/images/home") do |file| %>
     <% formatted_file = file.gsub(".png", "") %>
     <div class="categories__item">
-      <button class="categories__button active" data-active-button-target="categoryButton">
+      <button class="categories__button active" data-active-button-target="categoryButton"
+      data-report-details-target="categoryItem"
+      data-action="click->report-details#setActiveButton">
         <%= image_tag "#{file}" %>
         <% if formatted_file == 'disturb' %>
           <p>Disturbing the Peace</p>
