distubing the peace in last position

--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -49,6 +49,10 @@
     p {
       margin: 0;
     }
+
+    &.last {
+      order: 10;
+    }
   }
 /* ----------------------------- Categories Item ---------------------------- */
 
