--- a/app/views/components/_categories_list.html.erb
+++ b/app/views/components/_categories_list.html.erb
@@ -1,7 +1,7 @@
 <div class="categories__list">
   <% Dir.each_child("app/assets/images/home") do |file| %>
     <% formatted_file = file.gsub(".png", "") %>
-    <div class="categories__item">
+    <div class="categories__item <%= formatted_file.include?("disturb") ? "last" : "" %>">
       <button class="categories__button active" data-active-button-target="categoryButton"
       data-report-details-target="categoryItem"
       data-action="click->report-details#setActiveButton">
