added report type to incidents show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -119,8 +119,7 @@
     height: 100%;
   }
 
-  .card--type {
-    color: #238BEB;
-    margin-left: 8px;
+  .text--blue {
+    color: $primary;
   }
 }
