--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -39,6 +39,10 @@
     .mapboxgl-control-container {
       display: none;
     }
+
+    .text--blue {
+      color: $primary;
+    }
   }
 
   &__comments {
