--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -2,9 +2,9 @@
   <div class="row d-flex justify-content-between">
     <div class="col-10">
       <% if incident.user_id.nil? %>
-        <h1 class="card--type"><i>News report</i></h1>
+        <h1 class="text--blue"><i>News report</i></h1>
       <% else %>
-        <h1 class="card--type"><i>User report</i></h1>
+        <h1 class="text--blue"><i>User report</i></h1>
       <% end %>
       <h1><%= incident.title %></h1>
     </div>
