--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -1,6 +1,11 @@
 <div class="p-3">
   <div class="row">
     <div class="col-9">
+      <% if incident.user_id.nil? %>
+        <h1 class="text--blue"><i>News report</i></h1>
+      <% else %>
+        <h1 class="text--blue"><i>User report</i></h1>
+      <% end %>
       <h1><%= @incident.title %></h1>
     </div>
     <div class="col-3">
