changed verbiage on profile page

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,6 +1,6 @@
 <div class="profile-show p-3">
   <div class="d-flex justify-content-center border-bottom mt-3">
-    <h1>My <span class="text--blue">Profile</span></h1>
+    <h1>My <span class="text--blue">Activity</span></h1>
   </div>
   <div
     class="profile__incidents mt-2"
@@ -8,7 +8,7 @@
     data-read-more-more-text-value="See more"
     data-read-more-less-text-value="See less"
   >
-    <h5 class="text--gray text--roboto"><em>My Posts:</em></h5>
+    <h5 class="text--gray text--roboto"><em>My Reports:</em></h5>
     <%= render 'incidents', user: @user %>
   </div>
   <div
