change verbiage of buttons

--- a/app/views/components/_top_buttons.html.erb
+++ b/app/views/components/_top_buttons.html.erb
@@ -5,7 +5,7 @@
   </button>
   <button class="btn top_container__button"
   data-active-button-target="topButton" >
-    Crime News
+    News Reports
   </button>
   <button class="btn top_container__button"
   data-active-button-target="topButton" >
