--- a/app/views/feed/_buttons.html.erb
+++ b/app/views/feed/_buttons.html.erb
@@ -25,7 +25,7 @@
         All
       </a>
       <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
-        Crime News
+        News Reports
       </a>
       <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
         User Reports
