--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -1,12 +1,11 @@
 <div class="p-3">
-  <div class="row">
+  <div class="row align-items-start">
     <div class="col-9">
       <% if incident.user_id.nil? %>
         <h1 class="text--blue"><i>News report</i></h1>
       <% else %>
         <h1 class="text--blue"><i>User report</i></h1>
       <% end %>
-      <h1><%= @incident.title %></h1>
     </div>
     <div class="col-3">
       <div class="d-flex justify-content-end align-items-center card--category">
@@ -18,6 +17,7 @@
         <%= render 'icon', category: @incident.category_list.first %>
       </div>
     </div>
+    <h1><%= @incident.title %></h1>
   </div>
   <div
     class="mt-1"
