--- a/app/views/feed/_buttons.html.erb
+++ b/app/views/feed/_buttons.html.erb
@@ -1,11 +1,11 @@
-<div class="ps-3 pe-3">
+<div class="ps-2 pe-2">
   <div class="d-flex justify-content-center gap-2">
     <% if params[:filter] == "crimenews" %>
       <a class="btn top_container__button" style="width: 100%;" href="/feed">
         All
       </a>
       <a class="btn top_container__button active" style="width: 100%;"href="/feed?filter=crimenews">
-        Crime News
+        News Reports
       </a>
       <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
         User Reports
@@ -15,7 +15,7 @@
         All
       </a>
       <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
-        Crime News
+        News Reports
       </a>
       <a class="btn top_container__button active" style="width: 100%;" href="/feed?filter=userreports">
         User Reports
