fixed buttons on feed

--- a/app/views/feed/_buttons.html.erb
+++ b/app/views/feed/_buttons.html.erb
@@ -1,10 +1,10 @@
 <div class="ps-2 pe-2">
   <div class="d-flex justify-content-center gap-2">
-    <% if params[:filter] == "crimenews" %>
+    <% if params[:filter] == "newsreports" %>
       <a class="btn top_container__button" style="width: 100%;" href="/feed">
         All
       </a>
-      <a class="btn top_container__button active" style="width: 100%;"href="/feed?filter=crimenews">
+      <a class="btn top_container__button active" style="width: 100%;"href="/feed?filter=newsreports">
         News Reports
       </a>
       <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
@@ -14,7 +14,7 @@
       <a class="btn top_container__button" style="width: 100%;" href="/feed">
         All
       </a>
-      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
+      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=newsreports">
         News Reports
       </a>
       <a class="btn top_container__button active" style="width: 100%;" href="/feed?filter=userreports">
@@ -24,7 +24,7 @@
       <a class="btn top_container__button active" style="width: 100%;" href="/feed">
         All
       </a>
-      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=crimenews">
+      <a class="btn top_container__button" style="width: 100%;"href="/feed?filter=newsreports">
         News Reports
       </a>
       <a class="btn top_container__button" style="width: 100%;" href="/feed?filter=userreports">
