added asterisk after 'Add details' and comments to getIncidentLocation() in mapbox controller

--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -2,7 +2,7 @@
   <div class="report-details">
     <button class="report-details__button" data-action="click->report-details#closeCard" data-report-details-target="button">
       <i class="fas fa-info-circle"></i>
-      Add details
+      Add details*
     </button>
     <div class="card__body" data-report-details-target="card">
       <%= f.input :title,
