changed the map's height on the new page

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -23,5 +23,7 @@
                     data: { "report-details-target": "reportButton" } %>
     </div>
   <% end %>
-  <%= render 'shared/map' %>
+  <div class="map-container">
+    <%= render 'shared/map' %>
+  </div>
 </div>
