--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -11,6 +11,15 @@
     left: 5%;
   }
 
+  .map-container {
+    height: 60vh;
+    width: 100%;
+    .mapbox {
+      height: 66vh;
+      width: inherit;
+    }
+  }
+
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
     top: 4em;
     right: -0.5rem;
