added link to incidents show card

--- a/app/assets/stylesheets/pages/incidents/show.scss
+++ b/app/assets/stylesheets/pages/incidents/show.scss
@@ -30,6 +30,10 @@
       padding-bottom: 0;
     }
 
+    a {
+      font-size: 14px;
+    }
+
     .card--category {
       font-size: 13px;
       color: #8E9398;
