--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -42,7 +42,7 @@
     <% end %>
   </div>
   <% if @incident.source.present? %>
-    <%= link_to "Taken from #{@incident.source} <i class='fas fa-external-link-alt ms-1'></i>".html_safe, @incident.url %>
+    <%= link_to "Taken from #{@incident.source} <i class='fas fa-external-link-alt ms-1'></i>".html_safe, @incident.url, target: '_blank' %>
   <% end %>
   <div class="d-flex justify-content-between align-items-end mt-2">
     <%= render 'incident_card_bottom', incident: @incident  %>
