added some style

--- a/app/assets/stylesheets/components/_report_details.scss
+++ b/app/assets/stylesheets/components/_report_details.scss
@@ -9,17 +9,24 @@
   .card__body {
     padding: 0;
     transition: all 0.3s ease-in-out;
-    max-height: 150px;
+    // max-height: 150px;
+    max-height: 0px;
     overflow: hidden;
     border-top: 2px solid transparent;
     background: #1b1b1b;
     width: 100%;
 
-    &.close {
-      max-height: 0px;
-      padding: 0;
-      overflow: hidden;
+    &.open {
+        max-height: 800px;
+        padding: 0;
+        overflow: hidden;
     }
+
+    // &.close {
+    //   max-height: 0px;
+    //   padding: 0;
+    //   overflow: hidden;
+    // }
   }
 
   input.description, input.title {
@@ -44,6 +51,12 @@
       font-size: 1.25rem;
       margin-right: 0.3rem;
       position: relative;
+    }
+
+    &.open {
+      .arrow i {
+        transform: rotate(180deg);
+      }
     }
   }
 }
