--- a/app/views/incidents/_report_details.html.erb
+++ b/app/views/incidents/_report_details.html.erb
@@ -1,8 +1,9 @@
 <div class="card card--gray" data-report-details-target="detailsCard">
   <div class="report-details">
-    <button class="report-details__button" data-action="click->report-details#closeCard" data-report-details-target="button">
+    <button class="report-details__button" data-action="click->report-details#openCard" data-report-details-target="button" type="button">
       <i class="fas fa-info-circle"></i>
       Add details*
+      <span class="arrow"><i class="fas fa-chevron-up"></i></span>
     </button>
     <div class="card__body" data-report-details-target="card">
       <%= f.input :title,
