added delete button for incidents on activity page

--- a/app/assets/stylesheets/pages/profile/index.scss
+++ b/app/assets/stylesheets/pages/profile/index.scss
@@ -23,9 +23,10 @@
   display: inline-flex;
   align-items: center;
   padding: 0.7em;
-  background-color: #40464c;
+  background-color: #414346;
   color: #c2c2c2;
   border-radius: 50px;
   width: 100%;
   justify-content: center;
+  margin-top: 1em;
 }
