--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -1,4 +1,9 @@
 <div class="card--feed me-1 ms-1 p-3">
+  <% if incident.user == current_user && current_page?('/profile') %>
+    <div class="button--delete">
+      <%= link_to "<i class='fas fa-times'></i>".html_safe, incident_path(incident), method: :delete, data: { confirm: "Would you like to delete this incident?" } %>
+    </div>
+  <% end %>
   <div class="row d-flex justify-content-between">
     <div class="col-10">
       <% if incident.user_id.nil? %>
