--- a/app/views/profile/_comments.html.erb
+++ b/app/views/profile/_comments.html.erb
@@ -21,6 +21,11 @@
   <template data-read-more-target="full">
     <% @user.comments.each do |comment| %>
       <div class="comments__cards mt-2">
+        <% if comment.user == current_user && current_path?('/profile') %>
+          <div class="button--delete">
+            <%= link_to "<i class='fas fa-times'></i>".html_safe, incident_path(incident), method: :delete, data: { confirm: "Would you like to delete this incident?" } %>
+          </div>
+        <% end %>
         <p class="comments__header ms-3 me-3">
           You commented on
           <%= link_to comment.incident.title, incident_path(comment.incident) %>
@@ -31,7 +36,7 @@
       </div>
     <% end %>
   </template>
-<% elsif @user.comments.count <= 3 && @user.comments.count < 0 %>
+<% elsif @user.comments.count <= 3 && @user.comments.count > 0 %>
   <% @user.comments.each do |comment| %>
     <div class="comments__cards mt-2">
       <p class="comments__header ms-3 me-3">You commented on <%= link_to comment.incident.title, incident_path(comment.incident) %> on <%= comment.created_at.strftime("%Y-%m-%d") %></p>
