--- a/app/views/profile/_incidents.html.erb
+++ b/app/views/profile/_incidents.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     </template>
   </div>
-<% elsif user.incidents.count <= 2  && @user.comments.count < 0 %>
+<% elsif user.incidents.count <= 2  && @user.incidents.count > 0 %>
   <% user.incidents.each do |incident| %>
     <% if incident.title.present? %>
       <%= render 'feed/feed_card', incident: incident %>
