--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -2,9 +2,9 @@
   <div class="row align-items-start">
     <div class="col-9">
       <% if incident.user_id.nil? %>
-        <h1 class="text--blue"><i>News report</i></h1>
+        <h1 class="text--blue"><i>News Report</i></h1>
       <% else %>
-        <h1 class="text--blue"><i>User report</i></h1>
+        <h1 class="text--blue"><i>User Report</i></h1>
       <% end %>
     </div>
     <div class="col-3">
