--- a/app/views/profile/_comments.html.erb
+++ b/app/views/profile/_comments.html.erb
@@ -3,7 +3,9 @@
     <% @user.comments.first(3).each do |comment| %>
       <div class="comments__cards mt-2">
         <p class="comments__header ms-3 me-3">
-
+          <% if comment.user == current_user && current_page?('/profile') %>
+            <%= link_to "<i class='fas fa-times me-1'></i>".html_safe, comment_path(comment), method: :delete, data: { confirm: "Would you like to delete this comment?" } %>
+          <% end %>
           You commented on
           <%= link_to comment.incident.title, incident_path(comment.incident) %>
           on
@@ -40,7 +42,7 @@
     <div class="comments__cards mt-2">
       <p class="comments__header ms-3 me-3">
         <% if comment.user == current_user && current_page?('/profile') %>
-          <%= link_to "<i class='fas fa-times ms-1'></i>".html_safe, comment_path(comment), method: :delete, data: { confirm: "Would you like to delete this comment?" } %>
+          <%= link_to "<i class='fas fa-times me-1'></i>".html_safe, comment_path(comment), method: :delete, data: { confirm: "Would you like to delete this comment?" } %>
         <% end %>
         You commented on
         <%= link_to comment.incident.title, incident_path(comment.incident) %>
