--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,5 +1,5 @@
 <div class="profile-show p-3">
-  <div class="d-flex justify-content-center border-bottom mt-3">
+  <div class="d-flex justify-content-center border-bottom">
     <h1>My <span class="text--blue">Activity</span></h1>
   </div>
   <div
