--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -51,9 +51,8 @@
     }
   }
 
-  .report-details__submit {
+  .report-details__submit.btn {
     color: rgb(243, 243, 243);
-    background-color: #747985;
     border-radius: 0 0 16px 16px;
     width: 90%;
     position: fixed;
@@ -61,13 +60,21 @@
     height: 48px;
     left: 5%;
     @include centralize();
+    opacity: 0;
+    z-index: 0;
+    transition: all 0.6s;
+
+    &:disabled {
+      background-color: #747985;
+    }
 
     &:focus {
       background-color: #1a75e6;
     }
 
-    &.close {
-      display: none;
+    &.open {
+      opacity: 1;
+      z-index: 10;
     }
   }
 }
