--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,38 +1,38 @@
 {
-  "name": "App",
+  "name": "NeighborHUD",
   "icons": [
   {
-  "src": "/android-icon-36x36.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-36x36") %>",
   "sizes": "36x36",
   "type": "image/png",
   "density": "0.75"
   },
   {
-  "src": "/android-icon-48x48.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-48x48") %>",
   "sizes": "48x48",
   "type": "image/png",
   "density": "1.0"
   },
   {
-  "src": "/android-icon-72x72.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-72x72") %>",
   "sizes": "72x72",
   "type": "image/png",
   "density": "1.5"
   },
   {
-  "src": "/android-icon-96x96.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-96x96") %>",
   "sizes": "96x96",
   "type": "image/png",
   "density": "2.0"
   },
   {
-  "src": "/android-icon-144x144.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-144x144") %>",
   "sizes": "144x144",
   "type": "image/png",
   "density": "3.0"
   },
   {
-  "src": "/android-icon-192x192.png",
+  "src": "<%= asset_path("/assets/favicon/android-icon-192x192") %>",
   "sizes": "192x192",
   "type": "image/png",
   "density": "4.0"
