--- a/app/assets/javascripts/serviceworker.js.erb
+++ b/app/assets/javascripts/serviceworker.js.erb
@@ -1,20 +1,15 @@
-var CACHE_VERSION = 'v1';
-var CACHE_NAME = CACHE_VERSION + ':sw-cache-';
+console.log("test")
+
+var CACHE_NAME = 'v1-cached-assets'
 
 function onInstall(event) {
-  console.log('[Serviceworker]', "Installing!", event);
   event.waitUntil(
     caches.open(CACHE_NAME).then(function prefill(cache) {
       return cache.addAll([
-
-        // make sure serviceworker.js is not required by application.js
-        // if you want to reference application.js from here
-        '<%#= asset_path "application.js" %>',
-
+        '<%= asset_path "application.js" %>',
         '<%= asset_path "application.css" %>',
-
         '/offline.html',
-
+        // you get the idea ...
       ]);
     })
   );
@@ -29,7 +24,7 @@ function onActivate(event) {
           // Return true if you want to remove this cache,
           // but remember that caches are shared across
           // the whole origin
-          return cacheName.indexOf(CACHE_VERSION) !== 0;
+           return cacheName.indexOf('v1') !== 0;
         }).map(function(cacheName) {
           return caches.delete(cacheName);
         })
@@ -37,28 +32,25 @@ function onActivate(event) {
     })
   );
 }
-
-// Borrowed from https://github.com/TalAter/UpUp
 function onFetch(event) {
+  // Fetch from network, fallback to cached content, then offline.html for same-origin GET requests
+  var request = event.request;
+
+  if (!request.url.match(/^https?:\/\/example.com/) ) { return; }
+  if (request.method !== 'GET') { return; }
+
   event.respondWith(
-    // try to return untouched request from network first
-    fetch(event.request).catch(function() {
-      // if it fails, try to return request from the cache
-      return caches.match(event.request).then(function(response) {
-        if (response) {
-          return response;
-        }
-        // if not found in cache, return default offline content for navigate requests
-        if (event.request.mode === 'navigate' ||
-          (event.request.method === 'GET' && event.request.headers.get('accept').includes('text/html'))) {
-          console.log('[Serviceworker]', "Fetching offline content", event);
-          return caches.match('/offline.html');
-        }
-      })
-    })
+    fetch(request)                                        // first, the network
+      .catch(function fallback() {
+         caches.match(request).then(function(response) {  // then, the cache
+           response || caches.match("/offline.html");     // then, /offline cache
+         })
+       })
   );
+
+  // See https://jakearchibald.com/2014/offline-cookbook/#on-network-response for more examples
 }
 
-self.addEventListener('install', onInstall);
-self.addEventListener('activate', onActivate);
+self.addEventListener('install', onInstall)
+self.addEventListener('activate', onActivate)
 self.addEventListener('fetch', onFetch);
