fixed short name manifest

--- a/app/assets/config/manifest.json.erb
+++ b/app/assets/config/manifest.json.erb
@@ -1,7 +1,7 @@
 {
   "name": "NeighborHUD",
   "description": "A service that aggregates the latest crime news and detects recent trends based on your GPS location. Users can self-report their own incidents.",
-  "short_name": "Progressive",
+  "short_name": "NeighborHUD",
   "start_url": "/",
   "icons": [
     {
