fixed path for comment_top partial

--- a/app/views/profile/_comments.html.erb
+++ b/app/views/profile/_comments.html.erb
@@ -2,7 +2,7 @@
   <div data-read-more-target="content">
     <% @user.comments.first(3).each do |comment| %>
       <div class="comments__cards mt-2">
-        <%= render 'incidents/comment_top', comment: comment %>
+        <%= render 'profile/comment_top', comment: comment %>
         <%= render 'incidents/comment_card', comment: comment %>
       </div>
     <% end %>
@@ -16,7 +16,7 @@
   <template data-read-more-target="full">
     <% @user.comments.each do |comment| %>
       <div class="comments__cards mt-2">
-        <%= render 'incidents/comment_top', comment: comment %>
+        <%= render 'profile/comment_top', comment: comment %>
         <%= render 'incidents/comment_card', comment: comment %>
       </div>
     <% end %>
@@ -24,7 +24,7 @@
 <% elsif @user.comments.count <= 3 && @user.comments.count > 0 %>
   <% @user.comments.each do |comment| %>
     <div class="comments__cards mt-2">
-      <%= render 'incidents/comment_top', comment: comment %>
+      <%= render 'profile/comment_top', comment: comment %>
       <%= render 'incidents/comment_card', comment: comment %>
     </div>
   <% end %>
