--- a/app/views/incidents/_incident_card_bottom.html.erb
+++ b/app/views/incidents/_incident_card_bottom.html.erb
@@ -7,7 +7,7 @@
     <% distance = (Geocoder::Calculations.distance_between([35.0116, 135.7681], [@incident.latitude, @incident.longitude])).round(0) %>
   <% end %>
   <%= render 'distance_icon', distance: distance %>
-  <%= distance %>
+  <%= number_with_delimiter(distance, delimiter: ".") %>
   km away from you
 </p>
 <p class="card--category">
