--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -6,28 +6,7 @@
     </div>
     <h1><%= @incident.title %></h1>
   </div>
-  <div
-    class="mt-1"
-    data-controller="read-more"
-    data-read-more-more-text-value="Read more"
-    data-read-more-less-text-value="Read less"
-  >
-    <% if @incident.description.chars.count > 400 %>
-      <p data-read-more-target="content">
-        <%= @incident.description.first(400) %>...
-      </p>
-      <div class="d-flex justify-content-end">
-        <button data-action="read-more#toggle">
-          See more
-        </button>
-      </div>
-      <template data-read-more-target="full">
-        <p><%= @incident.description %></p>
-      </template>
-    <% else %>
-      <p><%= @incident.description %></p>
-    <% end %>
-  </div>
+  <%= render "incidents/description", incident: @incident %>
   <% if @incident.source.present? %>
     <%= link_to "Taken from #{@incident.source} <i class='fas fa-external-link-alt ms-1'></i>".html_safe, @incident.url, target: '_blank' %>
   <% end %>
