--- a/app/views/incidents/_tags.html.erb
+++ b/app/views/incidents/_tags.html.erb
@@ -1,4 +1,4 @@
-<% @incident.category_list.each do |category| %>
+<% incident.category_list.each do |category| %>
   <% if category == "Disturb" %>
     <span class="tags--category me-2">Disturbing the peace</span>
   <% else %>
