--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -1,19 +1,19 @@
 <div class="incident-show">
   <div class="incident-show__top">
     <div class="link--incident-details">
-      <%= render "incidents/incident_back_button" %>
+      <%= render "incident_back_button" %>
     </div>
     <div class="pb-1 d-flex justify-content-end">
-      <%= render 'incidents/tags', incident: @incident %>
+      <%= render 'tags', incident: @incident %>
     </div>
     <div class="incident-show__details card--incident-details">
-      <%= render 'incidents/incident_card', incident: @incident %>
+      <%= render 'incident_card', incident: @incident %>
       <%= render 'map' %>
     </div>
   </div>
   <div class="incident-show__comments">
     <% @incident.comments.each do |comment| %>
-      <%= render 'incidents/comment_card', comment: comment %>
+      <%= render 'comment_card', comment: comment %>
     <% end %>
   </div>
 </div>
