--- a/app/views/incidents/_incident_card_bottom.html.erb
+++ b/app/views/incidents/_incident_card_bottom.html.erb
@@ -2,11 +2,11 @@
   <% if request.location.latitude.present? %>
     <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [@incident.latitude, @incident.longitude])).round(0) %>
   <% elsif @incident.latitude.nil? %>
-    <% distance = 'Unknown' %>
+    <% distance = "Unknown" %>
   <% else %>
     <% distance = (Geocoder::Calculations.distance_between([35.0116, 135.7681], [@incident.latitude, @incident.longitude])).round(0) %>
   <% end %>
-  <%= render 'distance_icon', distance: distance %>
+  <%= render "distance_icon", distance: distance %>
   <%= distance %>
   km away from you
 </p>
