--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -6,7 +6,7 @@
       <%= render 'buttons' %>
     </div>
     <div class="feed__mid">
-      <%= render 'feed_incidents' %>
+      <%= render 'feed_incidents', incidents: @incidents %>
     </div>
     <div class="feed__bottom">
       <div class="feed__filter">
