--- a/app/views/feed/_feed_incidents.html.erb
+++ b/app/views/feed/_feed_incidents.html.erb
@@ -1,5 +1,5 @@
 <div class="feed__incidents" data-active-button-target="feed">
-  <% @incidents.each do |incident| %>
+  <% incidents.each do |incident| %>
     <%= render 'feed_card.html.erb', incident: incident %>
   <% end %>
 </div>
