--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -5,14 +5,7 @@
     </div>
   <% end %>
   <div class="row d-flex justify-content-between">
-    <div class="col-10">
-      <% if incident.user_id.nil? %>
-        <h1 class="text--blue"><i>News Report</i></h1>
-      <% else %>
-        <h1 class="text--blue"><i>User Report</i></h1>
-      <% end %>
-      <h1><%= incident.title %></h1>
-    </div>
+    <%= render 'type', incident: incident %>
     <div class="col-2">
       <%= render 'icon', category: incident.category_list.first %>
     </div>
