--- a/app/views/feed/_feed_card.html.erb
+++ b/app/views/feed/_feed_card.html.erb
@@ -11,26 +11,6 @@
     </div>
   </div>
   <p class="card--description"><%= incident.description.first(100)... %></p>
-  <div class="card--bottom d-flex justify-content-between align-items-end mt-2">
-    <% meguro_lat = 35.6415 %>
-    <% meguro_long = 139.6981 %>
-    <% if request.location.latitude.present? %>
-      <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [incident.latitude, incident.longitude])).round(0) %>
-    <% elsif incident.latitude.nil? %>
-      <% distance = 'Unknown' %>
-    <% else %>
-      <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [incident.latitude, incident.longitude])).round(0) %>
-    <% end %>
-    <p>
-      <%= render 'incidents/distance_icon.html.erb', distance: distance %>
-      <%= distance %>
-      km away from you
-    </p>
-    <p class="card--category">
-      <i class="fas fa-comment me-1" style="font-size: 16px;"></i>
-      comments
-      (<%= incident.comments.count %>)
-    </p>
-  </div>
+  <%= render 'distance', incident: incident %>
   <%= link_to "", incident_path(incident, path: 'feed'), class: "card--link" %>
 </div>
